# GRAPPA

./: CMakeLists.txt  GNUmakefile  GRAPPA.gra  README.md  graph.gra
images/: GRAPPA.tiff  OctoCat.tiff
include/: .GRAPPA.h.swp  Colors.h  Command.h  Declaration.h  FileIO.h  GRAPPA.h  MyGLUT.h  Save.h  Utility.h  define.h
src/: .main.cpp.swp  .main.cpp.un~  Command.cpp  FileIO.cpp  GRAPPA.cpp  Keyboard.cpp  Mouse.cpp  PopUpMenu.cpp  Save.cpp  main.cpp  main.cpp~
tutorials/: GRAPPA.gra  graph.gra
