cmake_minimum_required(VERSION 2.8)
project(GRAPPA CXX)
set(CMAKE_C_COMPILER gcc)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(./include)
file(GLOB sources src/*.cpp)
if(APPLE)
    add_definitions(-Wall -O3)
    find_package(GLUT)
    find_package(OpenGL)
    add_executable(GRAPPA ${sources})
    target_link_libraries(GRAPPA ${GLUT_LIBRARY} ${OPENGL_LIBRARY})
endif(APPLE)
# if(LINUX)
#     add_definitions(-w -O3)
#     add_executable(GRAPPA ${sources})
#     target_link_libraries(GRAPPA glut GLU GL Xmu Xi Xext X11 m pthread)
# endif(LINUX)

